Add license, update readme and bump version

--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "naturally-green",
-  "displayName": "Naturally Green",
-  "description": "A deep green theme with healthy contrast for nature lovers",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.87.0"
-  },
-  "categories": [
-    "Themes"
-  ],
-  "contributes": {
-    "themes": [
-      {
-        "label": "Naturally Green",
-        "uiTheme": "vs-dark",
-        "path": "./themes/Naturally Green-color-theme.json"
-      }
-    ]
-  }
+    "name": "naturally-green",
+    "displayName": "Naturally Green",
+    "description": "A deep green theme with healthy contrast for nature lovers",
+    "version": "1.0.0",
+    "publisher": "FaxxMachine",
+    "repository": "https://github.com/EpicCamel2302/vscode-naturally-green",
+    "engines": {
+        "vscode": "^1.87.0"
+    },
+    "categories": [
+        "Themes"
+    ],
+    "contributes": {
+        "themes": [
+            {
+                "label": "Naturally Green",
+                "uiTheme": "vs-dark",
+                "path": "./themes/Naturally Green-color-theme.json"
+            }
+        ]
+    }
 }
